--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -22,7 +22,7 @@
      accessories for the latest devices — both tied together with our
      world-class customer service.
     <br>
-      Mobile Fun is committed to providing excellent customer service and we aim to provide accurate and useful product advice
+      Jay khimaj mobile shop is committed to providing excellent customer service and we aim to provide accurate and useful product advice
       to customers through our website.
 
       </div><br>
@@ -30,10 +30,13 @@
       <div><img src="../../assets/success.jpg" alt="" height="250px" width="580px" style="margin-left: 570px; margin-top: -150px;" ></div>
       <br><br><br><br><br>
       <div style=" height:200px; width:200px;">
-          <b><h3 style="margin-left:50px; margin-top:-30px;"> Office</h3></b><br>
-          <div style="margin-left:50px; margin-top:-30px; height:30px; width:40px;">I-9 kapapapa
-            ,naranpura,ahmedabad
-            380013.
+          <b><h3 style="margin-left:50px; margin-top:-30px;"> Shop</h3></b><br>
+          <div style="margin-left:50px; margin-top:-30px; height:30px; width:230px;">
+            <br>
+              Shop no. B-110,B-Block,1st Floor,<br>
+              City Center, Mobile Market,<br>
+              Hubtown, New S.T. Stand,<br>
+              GeetaMandir, Ahmedabad.
           </div>
           <div style=" height:200px; width:200px;">
               <b><h3 style="margin-left:500px; margin-top:-60px;"> Company Information</h3></b><br><br><br>
