--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -52,13 +52,17 @@
  <div style="margin-top: 30px; margin-left:180px; height:500px; width:370px; border: 2px #F9F9F9; background-color:#F9F9F9">
 <br>
   <div style="margin-top: 50px; margin-left:80px;"><span><b><h4 >Address</h4></b></span><br>
-  <span><h5>I-5 dhdhdhdh dfhfhfh ffhfhf</h5></span>
+  <span><h5>Shop no. B-110,B-Block,1st Floor,<br>
+      City Center, Mobile Market,<br>
+      Hubtown, New S.T. Stand,<br>
+      GeetaMandir, Ahmedabad.
+</h5></span>
 </div>
 <div style="margin-top: 50px; margin-left:80px;"><span><b><h4 >Lets Talk</h4></b></span><br>
-  <span><h5>+91 8000111213</h5></span>
+  <span><h5>+91 8320375617</h5></span>
 </div>
 <div style="margin-top: 50px; margin-left:80px;"><span><b><h4 >General Support</h4></b></span><br>
-  <span><h5>lalit@gmail.com</h5></span>
+  <span><h5>lalitprajapati1998@gmail.com</h5></span>
 </div>
 
  </div>
