--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -39,7 +39,7 @@
 
         </mat-icon>
       </button>
-      <span><img src="{{'http://localhost:3000/images/product/logo.png'}}" style="height:53px; width:140px; " ></span>
+      <span><img src="{{'http://localhost:3000/images/product/logo1.jpg'}}" style="height:53px; width:140px; " ></span>
       <button mat-raised-button color="accent" style="margin-left: 900px;" (click)="onclick()">LOGOUT</button>
     </mat-toolbar>
     <router-outlet></router-outlet>
