--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -73,7 +73,7 @@
                 <button mat-raised-button color="warn" (click)="oncancel()">Cancel</button>
              </div> -->
              <div class="container">
-                <h3>Add-User</h3>
+                <h3>Sign-Up</h3>
 
                 <form (ngSubmit)="addform(f)" #f="ngForm">
                     <div class="container" >
