--- a/src/app/usermenu/usermenu.component.html
+++ b/src/app/usermenu/usermenu.component.html
@@ -6,7 +6,7 @@
             <div class="header-logo">
               <a class="logo" href=" ">
 
-                <img src="http://localhost:3000/images/product/logo.png" alt="" >
+                <img src="http://localhost:3000/images/product/logo1.jpg" alt="" style="height:40px; width:80px;">
 
               </a>
             </div>
@@ -40,7 +40,7 @@
                   </div>
                   <strong class="text-uppercase">My Account <i class="fa fa-caret-down"></i></strong>
                 </div>
-                <a href="#" class="text-uppercase">Login</a> / <a href="#" class="text-uppercase">Join</a>
+                <a routerLink="" class="text-uppercase">Login</a> / <a routerLink="/usermenu/signup" class="text-uppercase">Join</a>
                 <ul class="custom-menu">
                   <li><a routerLink="/usermenu/viewprofile"><i class="fa fa-user-o"></i> My Account</a></li>
                   <li><a routerLink="/usermenu/wishlist"><i class="fa fa-heart-o"></i> My Wishlist</a></li>
